--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 <div class="col-lg-6">
                     <div class="video-container">
                         <video class="img-fluid rounded-lg shadow-lg w-50 d-block mx-auto" autoplay loop muted playsinline>
-                            <source src="img/¿QUIENES SOMOS_ video.mov" type="video/mov">
-                            <source src="img/¿QUIENES SOMOS_ video.mov" type="video/webm">
+                            <source src="img/¿QUIENES SOMOS_ video.mp4" type="video/mp4">
+                            <source src="img/¿QUIENES SOMOS_ video.mp4" type="video/webm">
                             Tu navegador no soporta videos en HTML5.
                         </video>
                     </div>
@@ -212,8 +212,8 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="video-container">
                         <video class="img-fluid rounded-lg shadow-lg w-50 d-block mx-auto" autoplay loop muted playsinline>
-                            <source src="img/¿Qué hacemos_ video.mov" type="video/mov">
-                            <source src="img/¿Qué hacemos_ video.mov" type="video/webm">
+                            <source src="img/¿Qué hacemos_ video.mp4" type="video/mp4">
+                            <source src="img/¿Qué hacemos_ video.mp4" type="video/webm">
                             Tu navegador no soporta videos en HTML5.
                         </video>
                     </div>
@@ -313,7 +313,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="contact-info text-center">
-                        <p><i class="fab fa-whatsapp bottom-social-icon"></i> WhatsApp: <a href="https://wa.me/523272932323" class="text-decoration-none">32 72 93 23 23</a></p>
+                        <p><i class="fab fa-whatsapp bottom-social-icon"></i> WhatsApp: <a href="https://wa.me/+523921598789" class="text-decoration-none">+52 392 159 8789</a></p>
                         <div class="mt-4">
                             <a href="https://www.facebook.com/profile.php?id=100070790951303" target="_blank" class="text-decoration-none"><i class="fab fa-facebook bottom-social-icon"></i></a>
                             <a href="https://www.instagram.com/dimsatableros/" target="_blank" class="text-decoration-none"><i class="fab fa-instagram bottom-social-icon"></i></a>
