--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
     <!-- Social Media Floating Icons -->
     <div class="social-floating">
-        <a href="https://wa.me/523272932323" target="_blank"><i class="fab fa-whatsapp social-icon"></i></a>
+        <a href="https://wa.me/+523921598789" target="_blank"><i class="fab fa-whatsapp social-icon"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100070790951303" target="_blank"><i class="fab fa-facebook-f social-icon"></i></a>
         <a href="https://www.instagram.com/dimsatableros/" target="_blank"><i class="fab fa-instagram social-icon"></i></a>
         <a href="https://www.tiktok.com/@dimsatableros?is_from_webapp=1&sender_device=pc" target="_blank"><i class="fab fa-tiktok social-icon"></i></a>
