--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             <h3 class="card-title">Descarga o Visualiza</h3>
                             <p class="card-text">Consulta nuestro catálogo con todos nuestros productos.</p>
                             <div class="mt-3">
-                                <a href="img/Catálogo DIMSA 24FEB25.pdf" target="_blank" class="btn btn-primary">Ver Catálogo</a>
+                                <a href="img/Catalogo_DIMSA_24FEB25.pdf" target="_blank" class="btn btn-primary">Ver Catálogo</a>
                             </div>
                         </div>
                     </div>
